--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
+		"ignoreDeprecations": "5.0",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true
-	}
+	}, "exclude": ["./src/*/*/**"],
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
