removed ts error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
-		"ignoreDeprecations": "5.0",
+
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": false
 	}, "exclude": ["./src/*/*/**"],
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
